k8s/apps/backend-1/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-1-service
  labels:
    app: backend-1
spec:
  selector:
    app: backend-1
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
