k8s/apps/backend-1/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-1-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: back1.home.iamrpm.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-1-service
            port:
              number: 3000
